# linting

./: .gitignore  Makefile  README.md  pyproject.toml
.devcontainer/: Dockerfile
src/linting/: __init__.py  code_to_type.py  options.py  rules.py  ruleset.py
